--- a/HousesPrices.ipynb
+++ b/HousesPrices.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 3,
       "metadata": {
         "id": "cjBdok5Xh_mJ"
       },
@@ -53,10 +53,9 @@
           "height": 73
         },
         "id": "gNp0BbfknGrt",
-        "outputId": "210d2274-4b9e-4df4-dabf-c239fba8c525",
-        "collapsed": true
+        "outputId": "59b68bd4-c8dd-4026-98a3-bedd9809a2b2"
       },
-      "execution_count": 43,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -66,9 +65,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-5cf1c727-6a74-4424-84b2-41aa30ad24d8\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-c0774ba0-a91d-40de-8966-ead09aceff69\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-5cf1c727-6a74-4424-84b2-41aa30ad24d8\">\n",
+              "     <output id=\"result-c0774ba0-a91d-40de-8966-ead09aceff69\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -256,7 +255,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving 2018-2022.csv to 2018-2022 (1).csv\n"
+            "Saving 2018-2022.csv to 2018-2022.csv\n"
           ]
         }
       ]
@@ -271,17 +270,21 @@
         "df= df.drop_duplicates(subset=['price_paid','deed_date','street','paon','saon','estate_type', 'district'])\n",
         "print(df.columns.values)\n",
         "df=df.loc[:,['price_paid','deed_date','street', 'postcode','property_type','estate_type', 'district']]\n",
-        "print(df)"
+        "print(df)\n",
+        "\n",
+        "df['deed_date'] = df['deed_date'].apply(lambda x: x.timestamp())\n",
+        "df_2= df.sort_values(by='price_paid', ascending=True)\n",
+        "print(df_2)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YTD78uLzlenu",
-        "outputId": "3b8ad057-7fa3-4b85-c9e2-d470a4e949a6",
+        "outputId": "2da53e1f-85f0-4759-c6a3-4f9eb952c20c",
         "collapsed": true
       },
-      "execution_count": 71,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,33 +324,7 @@
             "246488           L     WANDSWORTH  \n",
             "246489           F     WANDSWORTH  \n",
             "\n",
-            "[246003 rows x 7 columns]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "df['deed_date'] = df['deed_date'].apply(lambda x: x.timestamp())\n",
-        "df_2= df.sort_values(by='price_paid', ascending=True)\n",
-        "print(df_2)"
-      ],
-      "metadata": {
-        "id": "qWLQpMx_qFFM",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "collapsed": true,
-        "outputId": "6502e106-3abd-4463-81b7-c3ee4a26f243"
-      },
-      "execution_count": 72,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "[246003 rows x 7 columns]\n",
             "        price_paid     deed_date               street  postcode property_type  \\\n",
             "79792       100000  1.538352e+09        COSTER AVENUE    N4 2LD             F   \n",
             "245782      100000  1.540944e+09              FROGNAL       NaN             O   \n",
@@ -384,16 +361,16 @@
       "source": [
         "df_cleaned=df_2.dropna()\n",
         "print(df_cleaned)\n",
-        "print(df_cleaned.isna().any())"
+        "print(df_cleaned.isna().any())\n"
       ],
       "metadata": {
-        "id": "EnyQcJ76cRAr",
-        "outputId": "c8632cf2-5a95-4bd6-e186-b72aeade5607",
+        "id": "qWLQpMx_qFFM",
+        "outputId": "b409ccea-dbfa-46bb-e885-b6c2ab161e13",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 76,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,6 +411,78 @@
             "estate_type      False\n",
             "district         False\n",
             "dtype: bool\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df_cleaned['district'])"
+      ],
+      "metadata": {
+        "id": "U-lwaFirnGpL",
+        "outputId": "d49f16f3-b63d-4a27-cf9f-9bc25e096295",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "79792                    HACKNEY\n",
+            "202943       CITY OF WESTMINSTER\n",
+            "245637                    CAMDEN\n",
+            "155288                 GREENWICH\n",
+            "245407       CITY OF WESTMINSTER\n",
+            "                   ...          \n",
+            "174274                WANDSWORTH\n",
+            "61167                     BARNET\n",
+            "61168                     BARNET\n",
+            "211637    KENSINGTON AND CHELSEA\n",
+            "211245    KENSINGTON AND CHELSEA\n",
+            "Name: district, Length: 245244, dtype: object\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in df_cleaned['district'].unique():\n",
+        "    if df_cleaned['district'].value_counts()[x] < 100:\n",
+        "        df_cleaned = df_cleaned[df_cleaned['district'] != x]\n",
+        "\n",
+        "print(df_cleaned['district'])"
+      ],
+      "metadata": {
+        "id": "42FFSqP0oXtY",
+        "outputId": "5a56681b-d396-459b-90c8-8272be97057b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "79792                    HACKNEY\n",
+            "202943       CITY OF WESTMINSTER\n",
+            "245637                    CAMDEN\n",
+            "155288                 GREENWICH\n",
+            "245407       CITY OF WESTMINSTER\n",
+            "                   ...          \n",
+            "174274                WANDSWORTH\n",
+            "61167                     BARNET\n",
+            "61168                     BARNET\n",
+            "211637    KENSINGTON AND CHELSEA\n",
+            "211245    KENSINGTON AND CHELSEA\n",
+            "Name: district, Length: 245157, dtype: object\n"
           ]
         }
       ]
